k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noteus-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: noteus-frontend
  template:
    metadata:
      labels:
        app: noteus-frontend
    spec:
      containers:
        - name: noteus-frontend
          image: asia-southeast2-docker.pkg.dev/neat-striker-455607-i3/noteus-repo/noteus-frontend:v1
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noteus-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: noteus-database
  template:
    metadata:
      labels:
        app: noteus-database
    spec:
      containers:
        - name: noteus-database
          image: asia-southeast2-docker.pkg.dev/neat-striker-455607-i3/noteus-repo/noteus-database:v1
          ports:
            - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noteus-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: noteus-api
  template:
    metadata:
      labels:
        app: noteus-api
    spec:
      containers:
        - name: noteus-api
          image: asia-southeast2-docker.pkg.dev/${PROJECT_ID}/${REPOSITORY}/noteus-api:${GITHUB_SHA}
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "256Mi"      # Minimum memory requested
              cpu: "250m"          # Minimum CPU requested
            limits:
              memory: "512Mi"      # Maximum memory allowed
              cpu: "500m"          # Maximum CPU allowed
